Updating version and changelog

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+1.9.7.9 (2011-05-24)
+
+* Fixed bug that caused timelines to stop updating for possibly long time.
+
 1.9.7.8 (2011-05-24)
 
 * Adding options to control how we show notifications from retweets of tweets written by me;
