Fixed translation error in message key 'minuteAgo' on language 'de'.

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -340,7 +340,7 @@
 		"message": "gerade eben"
 	},
 	"minuteAgo": {
-		"message": "vor weniger als einer Minuten"
+		"message": "vor weniger als einer Minute"
 	},
 	"minutes": {
 		"message": "$nr_of_minutes$ $minutes$ her",
