--- a/_locales/az/messages.json
+++ b/_locales/az/messages.json
@@ -1,6 +1,6 @@
 ﻿{
   "extDescription": {
-    "message": "Chromed Bird, Twitter hesabınızı Google Chrome üzərindən izləmənizi və idarə etmənizi təmin edən bir əlavədir.",
+    "message": "Shiny Bird, Twitter hesabınızı Google Chrome üzərindən izləmənizi və idarə etmənizi təmin edən bir əlavədir.",
     "description": "Extension description"
   },
   "resetSize": {
@@ -182,13 +182,13 @@
     "message": "AJAX istəyi uğursuzdur (pis əlaqə?)"
   },
   "successAuth": {
-    "message": "Təbriklər, hesabınızın həqiqili təsdiqləndi. Chromed Bird'dən zövq alın!"
+    "message": "Təbriklər, hesabınızın həqiqili təsdiqləndi. Shiny Bird'dən zövq alın!"
   },
   "cbAuthorized": {
-    "message": "Chromed Bird səlahiyyət verdi!"
+    "message": "Shiny Bird səlahiyyət verdi!"
   },
   "cbNotAuthorized": {
-    "message": "Nəsə istənilən kimi getmədi. Lütfən Chromed Bird ikonuna təkrar basın."
+    "message": "Nəsə istənilən kimi getmədi. Lütfən Shiny Bird ikonuna təkrar basın."
   },
   "authorizing": {
     "message": "Lütfən gözləyin..."
@@ -307,7 +307,7 @@
     "message": "Səlahiyyət ver!"
   },
   "exceededAPIHits": {
-    "message": "Gündəlik API istifadə limitini keçdiniz. Lütfən <a href='javascript:chrome.tabs.create({url:\"$options_url$\"})'>seçimlər səhifəsindən</a> yeniləmə aralığını yoxlayın. Chromed Bird $nextResetDate $nextResetTime$ tarixinə qədər yenilənməyəcək.",
+    "message": "Gündəlik API istifadə limitini keçdiniz. Lütfən <a href='javascript:chrome.tabs.create({url:\"$options_url$\"})'>seçimlər səhifəsindən</a> yeniləmə aralığını yoxlayın. Shiny Bird $nextResetDate $nextResetTime$ tarixinə qədər yenilənməyəcək.",
     "placeholders": {
       "options_url": {
         "content": "$1"
@@ -402,7 +402,7 @@
     "message": "il əvvəl"
   },
   "options_title": {
-    "message": "Chromed Bird Seçimləri"
+    "message": "Shiny Bird Seçimləri"
   },
   "conf_saved": {
     "message": "Nizamlarınız uğurla qeyd edildi."
