--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+1.9.8.1 (2011-05-28)
+
+* So long, farewell, auf Wiedersehen, good bye Chromed Bird. Welcome Silver Bird. The extension has been renamed.
+
 1.9.7.9 (2011-05-24)
 
 * Fixed bug that caused timelines to stop updating for possibly long time.
