--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -703,5 +703,8 @@
 	},
 	"l_notify_rt_never": {
 	  "message": "Never"
+	},
+	"invalid_keys": {
+	  "message": "You are using empty API keys. This is probably happening because you're running a development version.<br>You should register an application at http://dev.twitter.com and fill the API keys in the lib/secret_keys.js file."
 	}
 }
