--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -458,6 +458,9 @@
 	"l_hover_timeout": {
 		"message": "Marcar como leído en (ms):"
 	},
+	"l_background_url": {
+		"message": "Open links in background?"
+    },
 	"l_show_expanded_urls": {
 		"message": "Expandir URLs acortadas:"
 	},
