--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -458,6 +458,9 @@
 	"l_hover_timeout": {
 		"message": "Час читання (мс):"
 	},
+	"l_background_url": {
+		"message": "Open links in background?"
+	},
 	"l_show_expanded_urls": {
 		"message": "Розгортати короткі посилання:"
 	},
