--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -47,6 +47,14 @@
 	"add": {
 		"message": "Add"
 	},
+	"tab": {
+		"message": "Tab",
+		"description": "The string used on Add ... Tab on the context menu for each timeline"
+	},
+	"notify": {
+		"message": "Notify",
+		"description": "Used on the context menu for timelines"	
+	},
 	"selectList": {
 		"message": "- Select a list -"
 	},
@@ -489,7 +497,8 @@
 		"message": "Tweet Notification"
 	},
 	"l_change_icon": {
-		"message": "Change Icon"
+		"message": "Change Icon",
+		"description": "Options page label and timeline context menu entry"
 	},
 	"l_icon_color_column": {
 		"message": "Icon Color"
