--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -42,6 +42,14 @@
 	"add": {
 		"message": "Adicionar"
 	},
+	"tab": {
+		"message": "Aba",
+		"description": "The string used on Add ... Tab on the context menu for each timeline"
+	},
+	"notify": {
+		"message": "Notificar",
+		"description": "Used on the context menu for timelines"	
+	},
 	"selectList": {
 		"message": "- Selecione uma lista -"
 	},
@@ -484,7 +492,8 @@
 		"message": "Notificação do Tweet"
 	},
 	"l_change_icon": {
-		"message": "Mudar Ícone"
+		"message": "Mudar Ícone",
+		"description": "Options page label and timeline context menu entry"
 	},
 	"l_icon_color_column": {
 		"message": "Cor do Ícone"
